Shorten the comments in the discovery layer