@@ -40,16 +40,8 @@ public class FhirBaseAddressStrategy {
 	}
 
 	/**
-	 * The request as it would look addressed to the FHIR API, because that is what FHIR2's address
-	 * strategy expects to be handed.
-	 * <p>
-	 * Given the real request -- a launch servlet under {@code /ms/} -- FHIR2 cannot tell which FHIR
-	 * version is being asked for, and logs
-	 * {@code Could not determine FHIR version for URI ... and path ...} at ERROR on every launch before
-	 * returning a base with no version on the end. The launch still worked, because the version was
-	 * appended below, but every launch left an error in the log that looked like a fault and was not.
-	 * Handing it a URI it can read costs nothing and keeps the base FHIR2's own to compute, so the
-	 * {@code iss} an app is given still agrees with the server it will call.
+	 * The request as it would look addressed to the FHIR API, which is what FHIR2's address strategy
+	 * expects: given a launch servlet's own URI it cannot tell which FHIR version is meant.
 	 */
 	private HttpServletRequest asFhirRequest(HttpServletRequest request) {
 		final String uri = request.getContextPath() + "/ws/fhir2/" + fhirVersion(request);
@@ -66,6 +58,6 @@ public class FhirBaseAddressStrategy {
 	private String fhirVersion(HttpServletRequest request) {
 		String fhirVersion = request.getParameter("fhirVersion");
 
-		return fhirVersion == null || fhirVersion.trim().isEmpty() ? DEFAULT_FHIR_VERSION : fhirVersion.trim();
+		return fhirVersion == null || fhirVersion.isBlank() ? DEFAULT_FHIR_VERSION : fhirVersion.trim();
 	}
 }
